add relationship between roc auc and mann whiteney u statistic

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -242,6 +242,24 @@ url="http://dx.doi.org/10.1023/A:1010933404324"
 
 }
 
+
+
+@article {mason-rocAucRelationship,
+	author = {Mason, S. J. and Graham, N. E.},
+	title = {Areas beneath the relative operating characteristics (ROC) and relative operating levels (ROL) curves: Statistical significance and interpretation},
+	journal = {Quarterly Journal of the Royal Meteorological Society},
+	volume = {128},
+	number = {584},
+	issn = {1477-870X},
+	url = {http://dx.doi.org/10.1256/003590002320603584},
+	doi = {10.1256/003590002320603584},
+	pages = {2145--2166},
+	keywords = {ROC AUC, Mann–Whitney U-test, Probabilistic forecasts, Signal-detection theory, Student's t-test},
+	year = {2002},
+}
+
+
+
 @Article{james-biasVarianceGeneral,
 author="James, Gareth M.",
 title="Variance and Bias for General Loss Functions",
