--- a/ch4_evaluation_results.tex
+++ b/ch4_evaluation_results.tex
@@ -5,8 +5,217 @@
 %  Description: Chapter 4: Evaluation and Results
 %===============================================================================
 
-\chapter{Evaluation and Results}
-\label{cha:evaluation-results}
+\chapter{Evaluation and Results}\label{cha:evaluation-results}
+
+
+\section{Prediction of Long-term Migrations} \label{long_term}
+
+In this section, we describe the work on the prediction of long-term mobility. Our main goal is to attain a model in which migrations can be accurately predicted from the CDR data. Added to this, we would like to know what information from the data has most predictive power to the target variable.
+
+The CDR logs available for Argentina span a period of 5 months, 
+whereas the Mexican dataset includes 24 months, from January 2014 to December 2015, making it more suitable for this study.
+
+To start, we divide the available data into two distinct periods:
+$T_0$, from January 2014 to July 2015, considered as the ``past" in our experiment;
+and $T_1$, from August 2015 to December 2015, considered as the ``present".
+Knowing which users live in the endemic region $E_Z$ and how they communicate
+during period $T_1$,
+we want to infer whether they lived in $E_Z$ in the past (period $T_0$).
+Our target variable $Y$ is thus defined in the following way for every user $u$,
+where $H_u$ is the user's home antenna: 
+\[
+%\begin{equation}
+Y_u =
+\begin{cases}
+&1 \ \mbox{if} \ H_u \in E_Z \mbox{ during } T_0 \\
+&0 \ \mbox{in other cases}.
+\end{cases}
+%\end{equation}
+\]
+With this target variable, we tackle the prediction as a supervised classification problem.
+
+
+\subsection{Training Set}
+
+As explained, the training data belongs to period $T_1$, from August 2015 to December 2015;
+whereas the ground truth that we use to validate the predictions belongs to $T_0$, from January 2014 to August 2015. Raw data logs contain between 11 million and 30 million calls per day and the volume of calls increases over the months, where most recent months have higher rates.
+
+After preprocessing and cleaning the dataset, we obtained 
+a training set with 1.6 million users.
+
+To compare how this sampled population compares to country-wide distribution estimates,
+Table~\ref{tab:distribution_by_state} shows the percentage of antennas, the percentage of the population (according to INEGI census 2014) and
+the percentage of telco users per state, for the top 10 Mexican states.
+% (wikipedia \url{https://en.wikipedia.org/wiki/Ranked_list_of_Mexican_states})
+
+
+\begin{table}[ht]
+	\caption{Distribution of antennas, population and telco users by state.}
+	\label{tab:distribution_by_state}
+	\centering
+	\begin{tabular}{l r r r}
+		\toprule
+		State				& Number of antennas & Population 	& Telco users \\
+		\midrule
+		Distrito Federal      & 28.2\% 	& 8.5\%		& 20.1\%   \\
+		Mexico                     & 21.2\%		&   13.9\% 	& 23.8\%   \\
+		Jalisco                   & 10.7\% 	& 6.4\%		& 8.3\%    \\
+		Nuevo Leon               & 9.6\%	& 4.9\%		& 2.9\% \\
+		Guanajuato               & 6.1\%	& 4.8\%		& 5.9\% \\
+		Puebla                     & 5.8\%	& 5.3\%		& 4.3\% \\
+		Veracruz                  & 5.4\% 	& 6.8\%		& 4.2\% \\
+		Baja California       & 4.3\%	& 2.8\%		& 1.1\% \\
+		Yucatan                   & 4.1\%	& 1.7\%		& 2.9\% \\
+		Sinaloa                   & 4.1\%	& 2.5\%		& 0.4\% \\
+		\bottomrule
+	\end{tabular}
+\end{table}
+
+The table above describes the similarity between the population distribution of Mexico's population and the Telco's users. This is drawn to highlight possible sources of bias in the model.
+
+In this analysis we considered only postpaid users, i.e., users which have a monthly  plan rate. This filtering was done because prepaid users have a higher churn rate, thus meaning that phone lines are not necessarily associated with one single person during the two years of analysis, making them less suitable for the purpose of this study.
+
+% (i.e. cellphone lines might ``jump" suddenly from one region to another).
+
+% Data was manipulated to build a ??
+
+
+\subsection{Model Features}
+
+The quality of the classification relies on the ability to characterize the users and their communication patterns. % as differentiating as possible. 
+In general, the features constructed reflect calling and mobility patterns,
+segmented by different time periods during the week, and tagging whether the actions or subjects are `endemic'. 
+The training data runs from August 2015 to December 2015 (period $T_1$) and all CDRs are processed to extract features by user and by link. 
+
+Each week is divided into 3 time periods: (i) the period \textit{weekday} is from Monday to Friday, on working hours (from 8hs to 20hs); (ii) \textit{weeknight} is from Monday to Friday, between 20hs and 8hs of the following day;
+and (iii) \textit{weekend} is Saturday and Sunday.
+
+The model consists of the following features, which can be classified in 4 categories:
+% The data is aggregated by user and by link.0
+
+
+\subsubsection{Used and home antennas.}\label{homeantenna}
+
+For each user $u \in \calN_C$, we register the top ten most used antennas, during each month of the training period,
+together with the number of calls made through each antenna. We tag all users having their home antenna in the epidemic region as \textit{EPIDEMIC}. 
+%Which 10 antennas does a user use most during each month of the training month interval? 
+%
+%How many calls have been made through each antenna? 
+%
+%Sort antennas with 0 being the most used and 10 the least used. Fill with nulls when less than 10 antennas were used.
+We also register the most used antennas considering only calls made during the \textit{weeknight} period, as defined above. % that is from Monday to Friday excluding the working hours (from 8hs to 20hs)\label{WEEKNIGHT}.
+% Log counts as well.
+
+A user's home antenna is defined by the most used antenna. For our algorithms we considered two versions, the most used antenna in all of $T_0$., and the most used antenna during the \textit{week night}.
+%5 months. 
+With this, users were tagged as `endemic' if their home antenna is in the endemic zone $E_Z$ and `exposed' if any of the ten antennas logged is in the risk area.
+
+
+\subsubsection{Mobility diameter.}
+
+The user's logged antennas define a convex hull in space and the radius of the hull is taken to be as the mobility diameter. This length is representative of the area of influence of that individual, a feature expected to be correlated with long-term migrations.
+
+We register the mobility diameter of each user, as the diameter of the convex hull defined by his top 10 used antennas. Again, we generate two values, considering (i) all antennas and (ii) only the antennas used during the \textit{weeknight}.
+
+
+
+\subsubsection{Graph data and communications.}
+
+We look at the social graph $\calG_C$ built from the CDRs, and the communications between nodes in $\calN_C$.
+
+For each edge $\left< n_i, n_j \right> \in \calE_C$, we dive into each of their interactions, segmenting call data with different criteria. For %\textbf{each} 
+each month and each pair of users $\left< i,j \right>$, we gather the tuple $\left< time_{ij}, calls_{ij}, dir, period \right>$ where $time$ is the sum of all calls (in seconds), $calls$ is the number of calls exchanged, $dir$ is a boolean variable indicating whether the calls were incoming or outgoing (from user $i$'s point of view) and $period$ corresponds to a segmentation of the week into the periods \textit{weekday}, \textit{weeknight}, and \textit{weekend}.
+
+
+In this sense, two users $u_i, u_j \in \calN_C, u_i \neq uj$ are \textbf{neighbors} in the social graph if $time_{ij} > 0$.
+
+%\begin{description}
+%     \item [Neighbors.] From the social graph built from the CDRs we extracted the total count of neighbors in the communication graph and the total count of epidemic neighbors. 
+%      \item [Calls.] For each month, the total time and count of monthly calls made during is aggregated per user. This information is also segmented according to the hour of the day that the calls were made and whether they were made during the weekends. Special care was taken with calls placed to and from vulnerable users and aggregated accordingly.
+%\end{description}
+
+%if we find that user $j$ is epidemic. This may be translated as the edge is vulnerable if one of both users is epidemic.
+
+Since the samples in our dataset are users, we have to aggregate all these variables, by grouping interactions at the user level. The combination of different variables amounts to a total of 130 features per user.
+
+To illustrate the point, we show a small example of how two calling features could look like. Groupings and filters are applied only on the user's calls:
+
+\begin{table}[ht]
+	\caption{Graph Data Features Example}
+	\label{tab:data_example}
+	\centering
+	\begin{tabular} {|p{1.5cm}|p{1.5cm}|p{2cm}|p{1.5cm}|p{2cm}|p{1.5cm}|p{1cm}}
+		%{l r r r r r r }
+		\toprule
+		Feature name & Call/Time & Time Period & Direction & Endemicity & Month\\
+		\midrule
+		Calls WeekEnd InVul08       & Count of calls & Placed on WeekEnds & Incoming calls & Edges with endemic neighbours only & August\\
+		\midrule
+		Time WeekNight Out12 & Sum of duration in seconds & During weekdays and on out-of-office hours & Outgoing   & No endemic filtering   & December \\
+		
+		\bottomrule
+	\end{tabular}
+\end{table}
+
+
+%TimeWeekNight_OUT_12
+%CallsWeekEnd_IN_12
+
+Finally we aggregate all these variables at the user level, summing over all columns and grouping by user. 
+(either $j$ or $i$) by summing across all of the different components shown above, grouping the data at the user level.
+
+We also label each edge $\left< n_i, n_j \right> \in \calE_C$ if one or both users is endemic and
+ands count each user's amount of neighbors in the communication graph, as well as the endemic neighbors. This labeling defines user $i$ as \textit{vulnerable} whenever he has any edge with another user $j$ who lives in the endemic region $E_Z$. 
+
+%% el vulnerable NO es el edge, sino que es el usuario . 
+%La idea es, parate en el nodo i, hace algun filtro - o ninguno - de weeknight, in/out, weekend, mes, etc. y ahora decime
+%% if $\exists j$ such that edge $ij$ existe en el grafo de llamados (con el filtro que hayamos usado en ese momento puesto).
+%%
+
+%Additionally, for each user, we extract the total 
+
+
+\subsubsection{Validation data.} % {Ground Truth.}
+
+We perform an analysis similar to the home antenna detection previously described, 
+but considering the time period $T_0$ (from January 2014 to July 2015),
+in order to determine the home antenna of users during $T_0$.
+
+The number of people who maintain their home antenna between $T_0$ and $T_1$ is 1,012,416;
+whereas 580,425 users had a change in their home antenna.
+In terms of endemic condition, we observed that 1,551,560 users maintained their endemic condition
+between $T_0$ and $T_1$, whereas 41,281 had a change.
+
+
+%Dato de color:
+%Num de personas que mantiene su home antenna en los dos periodos: 1012416 cambio: 580425
+%
+%Num de personas que mantiene su $antenna_id_0$ (most used antenna, sin filtro de nada) en los dos periodos: 1052644 cambio: 540197
+%
+%Num de personas que mantiene su condicion de epidemicidad en los dos periodos: 1551560 cambio: 41281
+%
+%Refinando la epidemicidad:
+
+% Confusion matrix
+Table~\ref{tab:changes} 
+shows the matrix of changes $C$, such that $C_{i, j}$ is the number of users that were in group $i$ during period $T_0$ (the past) and moved to group $j$ during the training period $T_1$. As an example, lower left means was endemic, is now not endemic. 
+
+\begin{table}[ht]
+	\caption{Matrix of endemicity change}
+	\label{tab:changes}
+	\centering
+	\begin{tabular}{l r r }
+		\toprule
+		& Not endemic in $T_1$ & Endemic in $T_1$ \\
+		\midrule
+		Not endemic in $T_0$ & 1140360 & 18330   \\
+		Endemic in $T_0$       & 22951    & 411200 \\
+		\bottomrule
+	\end{tabular}
+\end{table}
+
+In relative numbers, this shows that only 2.59\% of users had a change in their endemic condition over time. A similar count shows that 66.0\% of users have not changed their home antenna from $T_0$ to $T_1$.
+
 
 % \subsection{Supervised Algorithms}
 \subsection{Supervised Classification}
